Updated swagger response schema definitions
